# HTL_St_Poelten_Airscoute

./: CMakeLists.txt  globals.txt  lwipopts.h  lwipopts_examples_common.h  manual_fix_instructions.txt  mbedtls_config.h  mbedtls_config_examples_common.h  password.h  pico_eu.cpp
libs/adc/: adc.cpp  adc.h
libs/bme688/: bme688.cpp  bme688.h
libs/bme688/api/BME68x_SensorAPI/: bme68x.c
libs/eInk/EPD_1in54_V2/: CMakeLists.txt  EPD_1in54_V2.c  EPD_1in54_V2.h
libs/eInk/Fonts/: CMakeLists.txt  fonts.h
libs/eInk/GUI/: CMakeLists.txt  GUI_Paint.c  GUI_Paint.h
libs/flash/: flash.cpp  flash.h
libs/gps/: myGPS.cpp  myGPS.h
libs/hm3301/: hm3301.cpp  hm3301.h
libs/https/: main.c  mbedtls_config_examples_common.h  tls.c  vercel_cert.h
libs/pas_co2/: pas_co2.cpp  pas_co2.h
libs/wifi/: wifi.cpp  wifi.h
